--- a/about.html
+++ b/about.html
@@ -6,16 +6,19 @@
   <title>About | Ali Badshah</title>
 
   <link rel="stylesheet" href="assets/css/style.css" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet"
+  />
 
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    crossorigin="anonymous"
+  />
 </head>
 
 <body>
@@ -37,7 +40,6 @@
   </div>
 </header>
 
-
 <!-- MAIN CONTENT -->
 <main class="page-main container">
 
@@ -47,90 +49,110 @@
     <p>Robotics • Embedded Systems • Human–Robot Interaction</p>
   </section>
 
-
   <!-- TWO COLUMN ABOUT SECTION -->
   <section class="two-column">
 
-    <!-- LEFT -->
+    <!-- LEFT COLUMN -->
     <div>
+
       <h2>Who I Am</h2>
-      <p class="muted">
-        I am a Robotics & Bio-Engineering student at the University of Tartu, working on companion robots,
-        embedded hardware, and expressive study-support robots like Pia-the-μRSC and the Robotic Study
-        Companion (RSC).
+      <p class="muted" style="text-align: justify;">
+        I am a Robotics & Bio-Engineering student at the University of Tartu, specializing in 
+        companion robots, embedded systems, and expressive study-support platforms such as 
+        <strong>Pia-the-µRSC</strong> and the <strong>Robotic Study Companion (RSC)</strong>.  
+        My work combines CAD design, 3D printing, electronics, firmware, and human–robot interaction 
+        to build friendly, accessible, and reproducible robotic systems for education and research.
       </p>
 
-      <p class="muted">
-        My work blends 3D printing, electronics, firmware, and human-robot interaction to create friendly, 
-        accessible, and reproducible robotic systems for education and research.
+      <p class="muted" style="text-align: justify;">
+        I am deeply interested in creating small, expressive robots that help motivate students, 
+        support learning, and bring personality to educational environments through motion and behaviour.
       </p>
 
       <h2>Skills & Tools</h2>
       <ul class="skills-list">
-        <li><i class="fa-solid fa-gear"></i> Embedded Systems (RPi Pico, ESP32, Raspberry Pi)</li>
-        <li><i class="fa-solid fa-robot"></i> HRI / Companion Robots</li>
-        <li><i class="fa-solid fa-screwdriver-wrench"></i> Electronics & Hardware Prototyping</li>
-        <li><i class="fa-solid fa-cube"></i> 3D Printing & CAD</li>
-        <li><i class="fa-solid fa-code"></i> Python, C/C++, MicroPython</li>
+        <li><i class="fa-solid fa-robot"></i> Companion Robots & HRI</li>
+        <li><i class="fa-solid fa-microchip"></i> Embedded Systems (RPi Pico, ESP32, Raspberry Pi)</li>
+        <li><i class="fa-solid fa-cube"></i> CAD & 3D Printing (Fusion 360, SolidWorks)</li>
+        <li><i class="fa-solid fa-screwdriver-wrench"></i> Electronics, Wiring & Prototyping</li>
+        <li><i class="fa-solid fa-code"></i> Firmware: MicroPython, Python, C/C++</li>
+        <li><i class="fa-solid fa-lightbulb"></i> Interaction Design & Motion Personality</li>
       </ul>
+
     </div>
 
-
-    <!-- RIGHT -->
+    <!-- RIGHT COLUMN -->
     <div>
+
       <div class="card-simple">
         <h3>Current Focus</h3>
-        <p class="muted">
-          Building Pia-the-μRSC with improved hardware, CAD redesign, sensor integration, and full documentation for a reproducible, portable study-companion robot.
+        <p class="muted" style="text-align: justify;">
+          Building <strong>Pia-the-µRSC</strong> with improved hardware, CAD redesign, sensor integration,
+          servo optimization, and complete reproducibility-focused documentation.  
+          My goal is to create a portable, robust, low-cost study-companion robot that students can build,
+          maintain, and extend.
         </p>
       </div>
 
       <div class="card-simple" style="margin-top: 1rem;">
         <h3>Education</h3>
-        <p class="muted">BSc Science & Technology (Robotics & Bio-Engineering)</p>
+        <p class="muted">BSc in Science & Technology (Robotics & Bio-Engineering)</p>
         <p class="muted">University of Tartu, Estonia</p>
       </div>
+
     </div>
 
   </section>
-
 
   <!-- HONORS & AWARDS -->
   <section style="margin-top: 3rem;">
     <h2>Honors & Awards</h2>
 
     <div class="card-simple">
-      <h3><i class="fa-solid fa-award" style="color: var(--accent);"></i> IEEE RO-MAN 2025 — Robot Design Competition</h3>
+      <h3><i class="fa-solid fa-award" style="color: var(--accent);"></i>
+        IEEE RO-MAN 2025 — Robot Design Competition</h3>
 
-      <p class="muted">Eindhoven, Netherlands &nbsp;•&nbsp; 25–29 August 2025</p>
+      <p class="muted">Eindhoven, Netherlands · 25–29 August 2025</p>
 
-      <ul style="color: var(--muted); margin-top: 0.7rem; line-height: 1.6;">
-        <li>Awarded <strong>Best Technical Design</strong> for poster presentation.</li>
-        <li>
-          Conference publication:<br>
-          Matevž Zorec, Farnaz Baksh, Ali Badshah,<br>
-          <em>"Say Hi to the RSC (v4.1), the study buddy you (can) build (and fix)!"</em>.
-        </li>
-      </ul>
+      <p style="text-align: justify;">
+        Awarded <strong>Best Technical Design</strong> at the IEEE RO-MAN 2025 Robot Design Competition 
+        for the poster presentation:
+      </p>
+
+      <p style="text-align: justify;">
+        <em>
+          Matevž Zorec, Farnaz Baksh, Ali Badshah.<br>
+          “Say Hi to the RSC (v4.1), the study buddy you (can) build (and fix)!”
+        </em>
+      </p>
+
+      <p style="text-align: justify;">
+        Recognized for contributions to companion-robot hardware robustness, reproducibility,
+        and accessibility in educational robotics. The work highlighted how RSC v4.1 can be 
+        assembled, repaired, and extended by students and researchers.
+      </p>
 
       <p style="margin-top: 1rem;">
         <a href="https://www.ro-man2025.org/awards" target="_blank" style="color: var(--accent);">
-          <i class="fa-solid fa-arrow-up-right-from-square"></i> Award Listing
+          <i class="fa-solid fa-arrow-up-right-from-square"></i> Official Awards Page
         </a>
       </p>
+
     </div>
   </section>
 
-
 </main>
-
 
 <!-- FOOTER -->
 <footer class="site-footer">
   <div class="container footer-content">
-    © 2025 Ali Badshah — Badshah Robotics
+    © <span id="year"></span> Ali Badshah — Badshah Robotics
   </div>
 </footer>
+
+<script>
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
 
 </body>
 </html>
