--- a/about.html
+++ b/about.html
@@ -1,158 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About | Ali Badshah</title>
-
-  <link rel="stylesheet" href="assets/css/style.css" />
-
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet"
-  />
-
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    crossorigin="anonymous"
-  />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About – Badshah Robotics</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
 
-<!-- HEADER -->
 <header class="site-header">
-  <div class="nav-container container">
-    <div class="logo">
-      <span class="logo-icon"><i class="fa-solid fa-robot"></i></span>
-      <span class="logo-text">Badshah Robotics</span>
-    </div>
+    <div class="container nav-container">
+        <div class="logo">
+            <div class="logo-icon"><i class="fas fa-robot"></i></div>
+            <div class="logo-text">Badshah Robotics</div>
+        </div>
 
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html" class="active">About</a>
-      <a href="projects.html">Projects</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html" class="active">About</a>
+            <a href="projects.html">Projects</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </div>
 </header>
 
-<!-- MAIN CONTENT -->
-<main class="page-main container">
 
-  <!-- PAGE HERO -->
-  <section class="page-hero">
-    <h1>About Me</h1>
-    <p>Robotics • Embedded Systems • Human–Robot Interaction</p>
-  </section>
+<main class="container page-section">
 
-  <!-- TWO COLUMN ABOUT SECTION -->
-  <section class="two-column">
+    <h1 class="section-title">About Me</h1>
+    <p class="section-subtitle">Robotics • Embedded Systems • Human–Robot Interaction</p>
 
-    <!-- LEFT COLUMN -->
-    <div>
-
-      <h2>Who I Am</h2>
-      <p class="muted" style="text-align: justify;">
-        I am a Robotics & Bio-Engineering student at the University of Tartu, specializing in 
-        companion robots, embedded systems, and expressive study-support platforms such as 
-        <strong>Pia-the-µRSC</strong> and the <strong>Robotic Study Companion (RSC)</strong>.  
-        My work combines CAD design, 3D printing, electronics, firmware, and human–robot interaction 
-        to build friendly, accessible, and reproducible robotic systems for education and research.
-      </p>
-
-      <p class="muted" style="text-align: justify;">
-        I am deeply interested in creating small, expressive robots that help motivate students, 
-        support learning, and bring personality to educational environments through motion and behaviour.
-      </p>
-
-      <h2>Skills & Tools</h2>
-      <ul class="skills-list">
-        <li><i class="fa-solid fa-robot"></i> Companion Robots & HRI</li>
-        <li><i class="fa-solid fa-microchip"></i> Embedded Systems (RPi Pico, ESP32, Raspberry Pi)</li>
-        <li><i class="fa-solid fa-cube"></i> CAD & 3D Printing (Fusion 360, SolidWorks)</li>
-        <li><i class="fa-solid fa-screwdriver-wrench"></i> Electronics, Wiring & Prototyping</li>
-        <li><i class="fa-solid fa-code"></i> Firmware: MicroPython, Python, C/C++</li>
-        <li><i class="fa-solid fa-lightbulb"></i> Interaction Design & Motion Personality</li>
-      </ul>
-
-    </div>
-
-    <!-- RIGHT COLUMN -->
-    <div>
-
-      <div class="card-simple">
-        <h3>Current Focus</h3>
-        <p class="muted" style="text-align: justify;">
-          Building <strong>Pia-the-µRSC</strong> with improved hardware, CAD redesign, sensor integration,
-          servo optimization, and complete reproducibility-focused documentation.  
-          My goal is to create a portable, robust, low-cost study-companion robot that students can build,
-          maintain, and extend.
+    <!-- Who I Am -->
+    <div class="section-block">
+        <h2><i class="fas fa-user-circle"></i> Who I Am</h2>
+        <p>
+            I am a Robotics & Bio-Engineering student at the University of Tartu, specializing in companion robots,
+            embedded systems, and expressive study-support platforms such as 
+            <strong>Pia-the-μRSC</strong> and the 
+            <strong>Robotic Study Companion (RSC)</strong>.
         </p>
-      </div>
-
-      <div class="card-simple" style="margin-top: 1rem;">
-        <h3>Education</h3>
-        <p class="muted">BSc in Science & Technology (Robotics & Bio-Engineering)</p>
-        <p class="muted">University of Tartu, Estonia</p>
-      </div>
-
+        <p>
+            My work combines CAD design, 3D printing, electronics, firmware development, and human-robot interaction
+            to create friendly, accessible, and reproducible robotic systems for education and research.
+        </p>
+        <p>
+            I am deeply interested in building small, expressive robots that help motivate students, support learning,
+            and bring personality to educational environments through motion and behaviour.
+        </p>
     </div>
 
-  </section>
-
-  <!-- HONORS & AWARDS -->
-  <section style="margin-top: 3rem;">
-    <h2>Honors & Awards</h2>
-
-    <div class="card-simple">
-      <h3><i class="fa-solid fa-award" style="color: var(--accent);"></i>
-        IEEE RO-MAN 2025 — Robot Design Competition</h3>
-
-      <p class="muted">Eindhoven, Netherlands · 25–29 August 2025</p>
-
-      <p style="text-align: justify;">
-        Awarded <strong>Best Technical Design</strong> at the IEEE RO-MAN 2025 Robot Design Competition 
-        for the poster presentation:
-      </p>
-
-      <p style="text-align: justify;">
-        <em>
-          Matevž Zorec, Farnaz Baksh, Ali Badshah.<br>
-          “Say Hi to the RSC (v4.1), the study buddy you (can) build (and fix)!”
-        </em>
-      </p>
-
-      <p style="text-align: justify;">
-        Recognized for contributions to companion-robot hardware robustness, reproducibility,
-        and accessibility in educational robotics. The work highlighted how RSC v4.1 can be 
-        assembled, repaired, and extended by students and researchers.
-      </p>
-
-      <p style="margin-top: 1rem;">
-        <a href="https://www.ro-man2025.org/awards" target="_blank" style="color: var(--accent);">
-          <i class="fa-solid fa-arrow-up-right-from-square"></i> Official Awards Page
-        </a>
-      </p>
-
+    <!-- Skills -->
+    <div class="section-block">
+        <h2><i class="fas fa-screwdriver-wrench"></i> Skills & Tools</h2>
+        <ul>
+            <li><i class="fas fa-robot"></i> Companion Robots & HRI</li>
+            <li><i class="fas fa-microchip"></i> Embedded Systems (Rpi Pico, ESP32, Raspberry Pi)</li>
+            <li><i class="fas fa-cube"></i> CAD & 3D Printing (Fusion 360, SolidWorks)</li>
+            <li><i class="fas fa-bolt"></i> Electronics, Wiring & Prototyping</li>
+            <li><i class="fas fa-code"></i> Firmware: MicroPython, Python, C/C++</li>
+            <li><i class="fas fa-sparkles"></i> Interaction Design & Motion Personality</li>
+        </ul>
     </div>
-  </section>
+
+    <!-- Current Focus -->
+    <div class="section-block">
+        <h2><i class="fas fa-lightbulb"></i> Current Focus</h2>
+        <p>
+            Building <strong>Pia-the-μRSC</strong> with improved hardware, optimized servo actuation,
+            sensor integration, CAD redesign, and complete reproducibility-focused documentation.
+        </p>
+        <p>
+            My goal is to build a portable, robust, low-cost companion robot that students can build, maintain,
+            and extend easily.
+        </p>
+    </div>
+
+    <!-- Education -->
+    <div class="section-block">
+        <h2><i class="fas fa-graduation-cap"></i> Education</h2>
+        <p><strong>BSc in Science & Technology (Robotics & Bio-Engineering)</strong></p>
+        <p>University of Tartu, Estonia</p>
+    </div>
 
 </main>
 
-<!-- FOOTER -->
-<footer class="site-footer">
-  <div class="container footer-content">
-    © <span id="year"></span> Ali Badshah — Badshah Robotics
-  </div>
-</footer>
 
-<script>
-  document.getElementById("year").textContent = new Date().getFullYear();
-</script>
+<footer class="site-footer">
+    <div class="footer-content">
+        <p>© 2025 Ali Badshah — Built with ❤️ and GitHub Pages</p>
+    </div>
+</footer>
 
 </body>
 </html>
